# High-Performance-Numerical-Differential-Equation-Solver

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DifferentialEquationSolver.cpp  DifferentialEquationSolver.hpp  DifferentialEquationSolverLib.cpp  Example.py  main.cpp  tests.py
src/cpp/: CMakeLists.txt  de.cpp  de.hpp  main  main.cpp  plan.txt
